2007-07-12  Paul Pogonyshev  <pogonyshev@gmx.net>

	* emacs-lisp/eldoc.el (eldoc-last-data): Revise documentation.
	(eldoc-print-current-symbol-info): Adjust for changed helper
	function signatures.
	(eldoc-get-fnsym-args-string): Add `args' argument.  Use new
	`eldoc-highlight-function-argument'.
	(eldoc-highlight-function-argument): New function.
	(eldoc-get-var-docstring): Format documentation with
	`font-lock-variable-name-face'.
	(eldoc-docstring-format-sym-doc): Add `face' argument and apply it
	where suited.
	(eldoc-fnsym-in-current-sexp): Return a list with argument index.
	(eldoc-beginning-of-sexp): Return number of skipped sexps.

2007-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* progmodes/compile.el (compilation-start): `start-process' must
	still be redefined when calling `start-process-shell-command'.

	* progmodes/gud.el (gud-file-name): When `default-directory' is a
	remote file name, prepend its remote part to the filename.
	(gud-common-init): When `default-directory' is a remote file name,
	make the filename relative to it.
	Based on a patch by Nick Roberts <nickrob@snap.net.nz>.

2007-07-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-default-mode-line-string): Add a mouse face,
	mouse binding and a tooltip.

2007-07-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu-bar.el (vc-menu-map): New defalias.

2007-07-10  Jim Meyering  <jim@meyering.net>  (tiny change)

	* emacs-lisp/copyright.el (copyright-current-gpl-version): Set to 3.

	* autoinsert.el (auto-insert-alist): s/2/3/ in the generated comment.

2007-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl.el: Load cl-loaddefs.el quietly.

	* vc-arch.el (vc-arch-complete): Remove.
	(vc-arch-revision-completion-table): Use complete-with-action.

	* subr.el (condition-case-no-debug, with-demoted-errors): New macros.
	(complete-with-action): New function.
	(dynamic-completion-table): Use it.

2007-07-10  Michael Albinus  <michael.albinus@gmx.de>
